# Agent-011CE

./: .env.example  .gitignore  .pypirc.example  README.md  docker-compose.yml  o11ce.env.example  open-peak-v1.md  open-peak-v2.md  pyproject.toml
.trae/specs/package-o11ce-cli/: checklist.md  spec.md  tasks.md
cli/: package-lock.json  package.json
cli/src/: attachments.mjs  cli.mjs  sse.mjs  state.mjs
config/: models.yml  runtime.yml
docker/agent/: Dockerfile
docker/browser/: Dockerfile
docs/plans/: 2026-05-03-open-peak-v1-v2-spec-plan.md
docs/specs/: 2026-05-02-open-peak-stack-design.md  open-peak-v1.md  open-peak-v2.md
docs/superpowers/plans/: 2026-05-03-open-peak-v1-django-ninja.md
o11ce_cli/: compose.py  config.py  main.py  runtime_client.py  sse.py
o11ce_cli/assets/: compose.yml
runtime/agent/: manage.py  requirements.txt
runtime/agent/api/: router.py  schemas.py  urls.py
runtime/agent/api/services/: config_loader.py  costing.py  jsonl_logger.py  openrouter_client.py  routing.py  run_manager.py  run_worker.py  shell_actions.py
runtime/agent/api/tests/: test_health.py  test_routing.py  test_shell_action.py  test_sse_buffer.py  test_sse_format.py
runtime/agent/open_peak_agent/: settings.py  urls.py  wsgi.py
runtime/browser/: manage.py  requirements.txt
runtime/browser/browser_api/: apps.py  router.py  urls.py
runtime/browser/open_peak_browser/: settings.py  urls.py  wsgi.py
scripts/: o11ce-compose.ps1  o11ce-compose.sh
tests/: test_cli_parser.py  test_compose.py  test_compose_commands.py
